--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -9,10 +9,27 @@
     "hyprland/workspaces": {
          "format": "{icon}",
          "format-icons": {
-                "active": "",
-                "default": "",
-                "empty": "",
-		"urgent": ""
+                // "default": ""
+                "1": "1",
+                "2": "2",
+                "3": "3",
+                "4": "4",
+                "5": "5",
+                "6": "6",
+                "7": "7",
+                "8": "8",
+                "9": "9",
+                "10": "10"
+                // "1": "󰎤",
+                // "2": "󰎧",
+                // "3": "󰎪",
+                // "4": "󰎭",
+                // "5": "󰎱",
+                // "6": "󰎳",
+                // "7": "󰎶",
+                // "8": "󰎹",
+                // "9": "󰎼",
+                // "10": "󰽽"
          }
     },
 
