[multiple] initial setup

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -68,7 +68,8 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Tab, exec, $menu
-bind = $mainMod, b, exec, $browser
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, I, exec, kitty -e impala 
 
 
 ### --- Function Keys --- ###
