--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ source = keybinds.conf
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar #& hyprpaper & firefox
+exec-once = waybar, hyprpaper
 
 
 #############################
