[hypr] wallpaper & config fix

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 $terminal = kitty
 $fileManager = thunar
-$menu = rofi -show run
+$menu = rofi -show drun
 $browser = firefox
 
 source = monitors.conf
@@ -18,7 +18,8 @@ source = keybinds.conf
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar, hyprpaper
+exec-once = waybar 
+exec-once = hyprpaper
 
 
 #############################
