--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
 wallpaper {
     monitor = eDP-1
-    path = ~/Pictures/botw/
+    path = ~/Pictures/botw/12.jpg
     fit_mode = cover
-    timeout = 6000
+    # timeout = 6000
 }
 
 splash = false
