[multiple] added wlogout & hyprlock

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,6 +2,7 @@ $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun
 $browser = firefox
+$logout = wlogout -b 1 -p layer-shell --margin-top 350 --margin-bottom 350 --margin-left 800 --margin-right 800
 
 source = monitors.conf
 source = style.conf
