--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -6,6 +6,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 ### --- System --- ###
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT CTRL, Q, exec, hyprctl kill
+bind = $mainMod SHIFT, X, exec, $logout
+bind = $mainMod, L, exec, hyprlock
 
 
 ### --- Navigation --- ###
