[multiple] added secondary monitor configs & projection settings

--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -8,6 +8,7 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT CTRL, Q, exec, hyprctl kill
 bind = $mainMod SHIFT, X, exec, $logout
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, M, exec, ~/MKArch/MKArch_switch_monitors 
 
 
 ### --- Navigation --- ###
