--- a/hypr/.config/hypr/monitor_switcher/monitors_mirror.conf
+++ b/hypr/.config/hypr/monitor_switcher/monitors_mirror.conf
@@ -1,5 +1,5 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor= eDP-1, 1920x1080@60, 0x0, 1
 
-# secondary monitors get extended to the right:
-monitor = , preferred, auto, 1
+# secondary monitors get mirrored:
+monitor = , preferred, auto, 1, mirror, eDP-1
