[multiple] adjusted monitor switcher, implemented new programmes, updated behaviours

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@ $menu = rofi -show drun
 $browser = firefox
 $logout = wlogout -b 1 -p layer-shell --margin-top 350 --margin-bottom 350 --margin-left 800 --margin-right 800
 
+source = primary_monitor.conf
 source = monitors.conf
 source = style.conf
 source = inputs.conf
@@ -14,13 +15,12 @@ source = keybinds.conf
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
 exec-once = waybar 
 exec-once = hyprpaper
+
+monitoradded = exec, killall waybar && waybar
+monitorremoved = exec, killall waybar && waybar
+
 
 
 #############################
@@ -71,6 +71,25 @@ windowrule {
 
     move = 20 monitor_h-120
     float = yes
+}
+
+
+# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
+dwindle {
+    pseudotile = false
+    preserve_split = true # You probably want this
+    force_split = 2
+}
+
+# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
+master {
+    new_status = master
+}
+
+# https://wiki.hypr.land/Configuring/Variables/#misc
+misc {
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
 ###################
