--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -72,7 +72,11 @@ bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdow
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Tab, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, I, exec, kitty -e impala 
+
+### --- TUIs --- ###
+bind = $mainMod SHIFT, I, exec, $terminal -e impala 
+bind = $mainMod SHIFT, B, exec, $terminal -e bluetui 
+bind = $mainMod SHIFT, T, exec, $terminal -e btop 
 
 
 ### --- Function Keys --- ###
