--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,6 +1,9 @@
 {
+    "output": ["*"],
     "layer": "top", 
     "position": "top", 
+    "exclusive": true,
+    "passthrough": false,
     
     "modules-left": ["clock"], 
     "modules-center": ["hyprland/workspaces"], 
@@ -78,29 +81,29 @@
         "format-icons": {
             "default": ["", "", " "]
         },
-        "on-click": "pavucontrol",
-	"on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
+        "on-click": "kitty -e bluetui"
+	    // "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
     },
 
     "network": {
-	"format": "{ifname}",
-	"format-wifi": "󰖩",
-	"format-ethernet": "󱎔",
-	"format-disconnected": "󰖪",
-	"tooltip-format": "{ifname}",
-	"tooltip-format-wifi": "{essid} ({signalStrength}%)",
-	"tooltip-format-ethernet": "{ifname}",
-	"tooltip-format-disconnected": "Disconnected",
-	"max-length": 50,
-	"on-click": "kitty -e impala"
+        "format": "{ifname}",
+        "format-wifi": "󰖩",
+        "format-ethernet": "󱎔",
+        "format-disconnected": "󰖪",
+        "tooltip-format": "{ifname}",
+        "tooltip-format-wifi": "{essid} ({signalStrength}%)",
+        "tooltip-format-ethernet": "{ifname}",
+        "tooltip-format-disconnected": "Disconnected",
+        "max-length": 50,
+        "on-click": "kitty -e impala"
      },
 
     "backlight": {
         "device": "intel_backlight",
         "format": "{icon}",
         "format-icons": ["󱩎", "󱩏", "󱩐", "󱩑", "󱩒", "󱩓", "󱩔", "󱩕", "󱩖", "󰛨"],
-	"tooltip-format": "{percent} %",
-	"on-click": "gnome-control-center"
+        "tooltip-format": "{percent} %",
+        "on-click": "gnome-control-center"
     },
 
     "custom/notification": {
