[hypr] added hyprsunset

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,6 +17,7 @@ source = keybinds.conf
 
 exec-once = waybar 
 exec-once = hyprpaper
+exec-once = hyprsunset
 
 monitoradded = exec, killall waybar && waybar
 monitorremoved = exec, killall waybar && waybar
