--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -78,7 +78,7 @@ windowrule {
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = false
-    preserve_split = true # You probably want this
+    preserve_split = true 
     force_split = 2
 }
 
@@ -102,9 +102,9 @@ misc {
 # for security reasons
 
 ecosystem {
-  enforce_permissions = 1
+  enforce_permissions = true
 }
 
 permission = /usr/bin/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
+permission = /usr/bin/hyprlock, screencopy, allow
