--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -72,6 +72,7 @@ bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdow
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Tab, exec, $menu
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, T, exec, teams-for-linux
 
 ### --- TUIs --- ###
 bind = $mainMod SHIFT, I, exec, $terminal -e impala 
